delete photos, add help btn, adjust pricing page

--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -7,18 +7,17 @@ import Layout from '../layouts/Layout.astro';
 		<h1 class="text-5xl font-bold mb-6 tracking-tight">Water Heater Replacement Pricing</h1>
 		<p class="text-lg max-w-2xl mx-auto mb-2">Honest, flat-rate pricing with no surprises.</p>
 		<!-- <p class="text-lg max-w-2xl text-left mb-2">Our rates include:</p> -->
-        <ul class="text-lg mb-12 px-6 max-w-2xl mx-auto list-disc list-inside space-y-2 text-left">
+        <ul class="text-lg mb-12 px-6 max-w-2xl mx-auto list-disc list-inside space-y-0 text-left">
             <li>No hidden fees</li>
-            <li>Removal and disposal of old water heater</li>
-            <li>Professional installation of new water heater</li>
-            <li>All required water, gas, venting, and electrical connections and materials as required by code</li>
-            <li>Work completed to Michigan Mechanical Code with permit</li>
-            <li>Thorough cleanup and haul-away</li>
             <li>All parts and labor included</li>
             <li>1 Year Parts & Labor Warranty</li>
+            <li>100% MI code compliance</li>
+            <li>Complete installation and testing</li>
+            <li>All required utility and venting materials</li>
+            <li>Thorough cleanup and haul-away</li>
+            <li>Disposal of old water heater</li>
             <li>Water Heater manufacturer warranties vary by make and model (avg 5-12 years)</li>
         </ul>
-
 
 		<div class="grid gap-10 sm:grid-cols-2">
 			<div class="bg-base-100 border border-base-300 rounded-xl shadow-md p-8 text-left">
