--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,11 @@ import PainPoints from '../components/PainPoints.astro';
 import TheFix from '../components/TheFix.astro';
 import Cta from '../components/Cta.astro';
 import Faq from '../components/Faq.astro';
+import HelpButton from '../components/HelpButton.astro';
 ---
 
 <Layout>
+	<HelpButton />
 	<Hero />
 	<PainPoints />
 	<TheFix />
