--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -3,20 +3,21 @@
 import Layout from '../layouts/Layout.astro';
 ---
 <Layout title="Water Heater Replacement Pricing | Grand Rapids, MI">
-	<section class="px-6 py-20 text-base-content text-center max-w-4xl mx-auto">
-		<h1 class="text-5xl font-bold mb-6 tracking-tight">Water Heater Replacement Pricing</h1>
-		<p class="text-lg max-w-2xl mx-auto mb-2">Honest, flat-rate pricing with no surprises.</p>
-		<!-- <p class="text-lg max-w-2xl text-left mb-2">Our rates include:</p> -->
-        <ul class="text-lg mb-12 px-6 max-w-2xl mx-auto list-disc list-inside space-y-0 text-left">
+	<section class="px-6 py-10 sm:py-20 text-base-content text-center max-w-4xl mx-auto">
+		<h1 class="text-4xl sm:text-5xl font-bold mb-6 tracking-tight">Water Heater Replacement Pricing</h1>
+		<p class="text-xl max-w-2xl mx-auto mb-2">Transparent prices with no surprises. Prices include:</p>
+		<!-- <p class="max-w-2xl text-left mb-2">Our rates include:</p> -->
+        <ul class="mb-12 px-6 max-w-2xl mx-auto list-disc list-inside space-y-0 text-left">
             <li>No hidden fees</li>
-            <li>All parts and labor included</li>
-            <li>1 Year Parts & Labor Warranty</li>
-            <li>100% MI code compliance</li>
-            <li>Complete installation and testing</li>
-            <li>All required utility and venting materials</li>
-            <li>Thorough cleanup and haul-away</li>
+            <li>Complete installation</li>
+            <li>All parts and labor</li>
+            <li>Permit and inspection</li>
+            <li>All utility connections</li>
+            <li>All venting materials</li>
+            <li>1 Yr Parts & Labor Warranty</li>
+            <li>Equipment warranties vary by make and model (avg 5-12 years)</li>
             <li>Disposal of old water heater</li>
-            <li>Water Heater manufacturer warranties vary by make and model (avg 5-12 years)</li>
+            <li>Thorough cleanup</li>
         </ul>
 
 		<div class="grid gap-10 sm:grid-cols-2">
