--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -3,9 +3,9 @@
 ---
 <section class="bg-primary text-primary-content py-16 px-6 text-center">
 	<div class="max-w-3xl mx-auto">
-		<h2 class="text-4xl font-bold mb-4">Need Hot Water Back Fast?</h2>
+		<h2 class="text-4xl font-bold mb-4">Need Hot Water Fast?</h2>
 		<p class="text-lg mb-8">
-			Call now for fast service, or book a virtual estimate to get started. We’ll walk you through options and schedule your install — no pressure, no surprises.
+			Call now for fastest service, or book a virtual estimate to get started. We’ll walk you through options and schedule your install — no pressure, no surprises - all our pricing is out in the open.
 		</p>
 		<div class="flex flex-col sm:flex-row justify-center gap-4">
 			<a href="tel:6165551234" class="btn btn-secondary text-base-content text-lg w-72"><svg  xmlns="http://www.w3.org/2000/svg"  width={24}  height={24}  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width={2}  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-phone"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" /></svg>		<div class="flex flex-col sm:flex-row justify-center gap-4"></div> Call Now for Fast Service</a>
