--- a/src/pages/how-to-stop-a-water-leak.astro
+++ b/src/pages/how-to-stop-a-water-leak.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Cta from '../components/Cta.astro';
 
 const metadata = {
     title: `How To Stop A Water Leak | Water Heater Replacement Company of Grand Rapids`,
@@ -65,4 +66,5 @@ const metadata = {
                 </li>
             </ul>
     </section>
+    <Cta title="Now that the leak has stopped, let us clean it up." />
 </Layout>
