--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,7 +4,7 @@ import ThemeSelector from './ThemeSelector.astro';
 
 <div class="fixed top-0 left-0 w-full z-50 navbar bg-base-100 shadow-sm">
     <div class="navbar-start">
-        <a aria-label="Home | Water Heater Replacement Company of Grand Rapids" href="/" class=" max-w-72 btn btn-ghost text-xl">Water Heater Replacement Company of Grand Rapids</a>
+        <a aria-label="Home | Water Heater Replacement Company of Grand Rapids" href="/" class=" max-w-72 btn btn-ghost h-fit text-xl">Water Heater Replacement Company of Grand Rapids</a>
     </div>
     <div class="navbar-end">
         <!-- desktop menu -->
